# python-project-lvl1

./: Makefile  README.md  pyproject.toml
.github/workflows/: github-actions-demo.yml
brain_games/: cli.py  engine.py  welcome_cli.py
brain_games/games/: cli_calc.py  cli_even.py  cli_gcd.py  cli_prime.py  cli_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
